--- a/src/assets/scss/WhatsappButton.scss
+++ b/src/assets/scss/WhatsappButton.scss
@@ -1,7 +1,6 @@
 @import './base';
 
 .whatsappButton {
-  align-self: flex-end;
   background: hsla(111, 91%, 91%, 1);
   box-shadow: 0px 1px 1px 0px hsla(0, 0%, 0%, 0.25);
   width: calculateRem(200px);
@@ -12,9 +11,10 @@
   padding: calculateRem(8px) calculateRem(16px);
   text-decoration: none;
   border-radius: 5px;
+  margin-top: calculateRem(53px);
   margin-bottom: calculateRem(32.88px);
-  margin-right: calculateRem(70px);
   transition: background-color 0.2s;
+
   &__label {
     color: $text-color;
     font-size: calculateRem(14px);
@@ -33,8 +33,17 @@
     background-color: adjust-color($color: #d9fdd3, $lightness: -10%);
   }
 
+  &__wrapper {
+    justify-content: flex-end;
+    padding-right: calculateRem(70px);
+
+    @include device(mobile) {
+      padding-left: calculateRem(25px);
+      padding-right: calculateRem(25px);
+    }
+  }
+
   @include device(mobile) {
-    margin-right: 0;
     width: 100%;
   }
 }
